// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OsirisRequestAdapter toApplicationFlat nullify idVersement if EJ is missing 1`] = `
{
  "allocatorId": null,
  "allocatorIdType": null,
  "allocatorName": null,
  "applicationId": "osiris-OSIRIS_ID",
  "applicationProviderId": "OSIRIS_ID",
  "beneficiaryEstablishmentId": "10000000000001",
  "beneficiaryEstablishmentIdType": "10000000000001",
  "budgetaryYear": 2022,
  "cofinancersIdType": null,
  "cofinancersNames": [
    "CAF",
    "ARS",
    "DRAC",
  ],
  "cofinancingRequested": true,
  "confinancersId": null,
  "conventionDate": null,
  "decisionDate": 2022-01-01T00:00:00.000Z,
  "decisionReference": null,
  "depositDate": 2025-08-04T00:00:00.000Z,
  "ej": null,
  "grantedAmount": undefined,
  "idRAE": null,
  "instructiveDepartementId": null,
  "instructiveDepartmentIdType": null,
  "instructiveDepartmentName": undefined,
  "joinKeyDesc": "N° dossier de l'outil "Le Compte Asso". Il permet de faire un lien entre la requête OSIRIS et le dossier du Compte Asso.",
  "joinKeyId": "LE_COMPTE_ASSO_ID",
  "managingAuthorityId": null,
  "managingAuthorityIdType": null,
  "managingAuthorityName": null,
  "nature": "Aide en numéraire",
  "object": "",
  "paymentCondition": null,
  "paymentConditionDesc": null,
  "paymentId": null,
  "paymentPeriodDates": null,
  "pluriannual": false,
  "pluriannualYears": "2022|2023|2024|2025",
  "provider": "osiris",
  "requestYear": 2025,
  "requestedAmount": undefined,
  "scheme": undefined,
  "statusLabel": "NORMALIZED_LABEL",
  "subScheme": undefined,
  "subventionPercentage": null,
  "totalAmount": null,
  "ueNotification": null,
  "uniqueId": "osiris-OSIRIS_ID-2022",
  "updateDate": 2025-01-01T00:00:00.000Z,
}
`;

exports[`OsirisRequestAdapter toApplicationFlat returns application flat with date from object id 1`] = `
{
  "allocatorId": null,
  "allocatorIdType": null,
  "allocatorName": null,
  "applicationId": "osiris-OSIRIS_ID",
  "applicationProviderId": "OSIRIS_ID",
  "beneficiaryEstablishmentId": "10000000000001",
  "beneficiaryEstablishmentIdType": "10000000000001",
  "budgetaryYear": 2022,
  "cofinancersIdType": null,
  "cofinancersNames": [
    "CAF",
    "ARS",
    "DRAC",
  ],
  "cofinancingRequested": true,
  "confinancersId": null,
  "conventionDate": null,
  "decisionDate": 2022-01-01T00:00:00.000Z,
  "decisionReference": null,
  "depositDate": 2025-08-04T00:00:00.000Z,
  "ej": "EJ00001",
  "grantedAmount": undefined,
  "idRAE": null,
  "instructiveDepartementId": null,
  "instructiveDepartmentIdType": null,
  "instructiveDepartmentName": undefined,
  "joinKeyDesc": "N° dossier de l'outil "Le Compte Asso". Il permet de faire un lien entre la requête OSIRIS et le dossier du Compte Asso.",
  "joinKeyId": "LE_COMPTE_ASSO_ID",
  "managingAuthorityId": null,
  "managingAuthorityIdType": null,
  "managingAuthorityName": null,
  "nature": "Aide en numéraire",
  "object": "",
  "paymentCondition": null,
  "paymentConditionDesc": null,
  "paymentId": "10000000000001-EJ00001-2022",
  "paymentPeriodDates": null,
  "pluriannual": false,
  "pluriannualYears": "2022|2023|2024|2025",
  "provider": "osiris",
  "requestYear": 2025,
  "requestedAmount": undefined,
  "scheme": undefined,
  "statusLabel": "NORMALIZED_LABEL",
  "subScheme": undefined,
  "subventionPercentage": null,
  "totalAmount": null,
  "ueNotification": null,
  "uniqueId": "osiris-OSIRIS_ID-2022",
  "updateDate": 2025-01-01T00:00:00.000Z,
}
`;

exports[`OsirisRequestAdapter toApplicationFlat returns application flat with default date 1`] = `
{
  "allocatorId": null,
  "allocatorIdType": null,
  "allocatorName": null,
  "applicationId": "osiris-OSIRIS_ID",
  "applicationProviderId": "OSIRIS_ID",
  "beneficiaryEstablishmentId": "10000000000001",
  "beneficiaryEstablishmentIdType": "10000000000001",
  "budgetaryYear": 2022,
  "cofinancersIdType": null,
  "cofinancersNames": [
    "CAF",
    "ARS",
    "DRAC",
  ],
  "cofinancingRequested": true,
  "confinancersId": null,
  "conventionDate": null,
  "decisionDate": 2022-01-01T00:00:00.000Z,
  "decisionReference": null,
  "depositDate": 2025-08-04T00:00:00.000Z,
  "ej": "EJ00001",
  "grantedAmount": undefined,
  "idRAE": null,
  "instructiveDepartementId": null,
  "instructiveDepartmentIdType": null,
  "instructiveDepartmentName": undefined,
  "joinKeyDesc": "N° dossier de l'outil "Le Compte Asso". Il permet de faire un lien entre la requête OSIRIS et le dossier du Compte Asso.",
  "joinKeyId": "LE_COMPTE_ASSO_ID",
  "managingAuthorityId": null,
  "managingAuthorityIdType": null,
  "managingAuthorityName": null,
  "nature": "Aide en numéraire",
  "object": "",
  "paymentCondition": null,
  "paymentConditionDesc": null,
  "paymentId": "10000000000001-EJ00001-2022",
  "paymentPeriodDates": null,
  "pluriannual": false,
  "pluriannualYears": "2022|2023|2024|2025",
  "provider": "osiris",
  "requestYear": 2025,
  "requestedAmount": undefined,
  "scheme": undefined,
  "statusLabel": "NORMALIZED_LABEL",
  "subScheme": undefined,
  "subventionPercentage": null,
  "totalAmount": null,
  "ueNotification": null,
  "uniqueId": "osiris-OSIRIS_ID-2022",
  "updateDate": 2025-01-01T00:00:00.000Z,
}
`;

exports[`OsirisRequestAdapter toCommon returns proper result 1`] = `
{
  "dispositif": "DISPOSITIF",
  "exercice": 2023,
  "montant_accorde": 42,
  "montant_demande": 43,
  "objet": "ACTION 1 – ACTION 2",
  "service_instructeur": "INSTRUCTEUR",
  "siret": "123456789",
  "statut": "NORMALIZED_LABEL",
}
`;

exports[`OsirisRequestAdapter toDemandeSubvention() should return a DemandeSubvention 1`] = `
{
  "actions_proposee": [],
  "annee_demande": {
    "last_update": 2022-01-01T00:00:00.000Z,
    "provider": "OSIRIS",
    "type": "number",
    "value": 2022,
  },
  "contact": {
    "email": {
      "last_update": 2022-01-01T00:00:00.000Z,
      "provider": "OSIRIS",
      "type": "undefined",
      "value": undefined,
    },
    "telephone": undefined,
  },
  "date_commision": {
    "last_update": 2022-01-01T00:00:00.000Z,
    "provider": "OSIRIS",
    "type": "object",
    "value": 2022-01-01T00:00:00.000Z,
  },
  "dispositif": {
    "last_update": 2022-01-01T00:00:00.000Z,
    "provider": "OSIRIS",
    "type": "undefined",
    "value": undefined,
  },
  "ej": {
    "last_update": 2022-01-01T00:00:00.000Z,
    "provider": "OSIRIS",
    "type": "string",
    "value": "EJ00001",
  },
  "montants": {
    "accorde": {
      "last_update": 2022-01-01T00:00:00.000Z,
      "provider": "OSIRIS",
      "type": "undefined",
      "value": undefined,
    },
    "demande": {
      "last_update": 2022-01-01T00:00:00.000Z,
      "provider": "OSIRIS",
      "type": "undefined",
      "value": undefined,
    },
    "propose": {
      "last_update": 2022-01-01T00:00:00.000Z,
      "provider": "OSIRIS",
      "type": "undefined",
      "value": undefined,
    },
    "total": {
      "last_update": 2022-01-01T00:00:00.000Z,
      "provider": "OSIRIS",
      "type": "undefined",
      "value": undefined,
    },
  },
  "pluriannualite": {
    "last_update": 2022-01-01T00:00:00.000Z,
    "provider": "OSIRIS",
    "type": "undefined",
    "value": undefined,
  },
  "service_instructeur": {
    "last_update": 2022-01-01T00:00:00.000Z,
    "provider": "OSIRIS",
    "type": "undefined",
    "value": undefined,
  },
  "siret": {
    "last_update": 2022-01-01T00:00:00.000Z,
    "provider": "OSIRIS",
    "type": "string",
    "value": "10000000000001",
  },
  "sous_dispositif": {
    "last_update": 2022-01-01T00:00:00.000Z,
    "provider": "OSIRIS",
    "type": "undefined",
    "value": undefined,
  },
  "status": {
    "last_update": 2022-01-01T00:00:00.000Z,
    "provider": "OSIRIS",
    "type": "undefined",
    "value": undefined,
  },
  "statut_label": {
    "last_update": 2022-01-01T00:00:00.000Z,
    "provider": "OSIRIS",
    "type": "string",
    "value": "NORMALIZED_LABEL",
  },
  "territoires": [],
  "versement": {
    "acompte": {
      "last_update": 2022-01-01T00:00:00.000Z,
      "provider": "OSIRIS",
      "type": "undefined",
      "value": undefined,
    },
    "compensation": {
      "n-1": {
        "last_update": 2022-01-01T00:00:00.000Z,
        "provider": "OSIRIS",
        "type": "undefined",
        "value": undefined,
      },
      "reversement": {
        "last_update": 2022-01-01T00:00:00.000Z,
        "provider": "OSIRIS",
        "type": "undefined",
        "value": undefined,
      },
    },
    "realise": {
      "last_update": 2022-01-01T00:00:00.000Z,
      "provider": "OSIRIS",
      "type": "undefined",
      "value": undefined,
    },
    "solde": {
      "last_update": 2022-01-01T00:00:00.000Z,
      "provider": "OSIRIS",
      "type": "undefined",
      "value": undefined,
    },
  },
  "versementKey": {
    "last_update": 2022-01-01T00:00:00.000Z,
    "provider": "OSIRIS",
    "type": "string",
    "value": "EJ00001",
  },
}
`;

exports[`OsirisRequestAdapter toDemandeSubvention() should set versementKey to undefined if no EJ 1`] = `
{
  "actions_proposee": [],
  "annee_demande": {
    "last_update": 2022-01-01T00:00:00.000Z,
    "provider": "OSIRIS",
    "type": "number",
    "value": 2022,
  },
  "contact": {
    "email": {
      "last_update": 2022-01-01T00:00:00.000Z,
      "provider": "OSIRIS",
      "type": "undefined",
      "value": undefined,
    },
    "telephone": undefined,
  },
  "date_commision": {
    "last_update": 2022-01-01T00:00:00.000Z,
    "provider": "OSIRIS",
    "type": "string",
    "value": "2022-01-01T00:00:00.000Z",
  },
  "dispositif": {
    "last_update": 2022-01-01T00:00:00.000Z,
    "provider": "OSIRIS",
    "type": "undefined",
    "value": undefined,
  },
  "ej": undefined,
  "montants": {
    "accorde": {
      "last_update": 2022-01-01T00:00:00.000Z,
      "provider": "OSIRIS",
      "type": "undefined",
      "value": undefined,
    },
    "demande": {
      "last_update": 2022-01-01T00:00:00.000Z,
      "provider": "OSIRIS",
      "type": "undefined",
      "value": undefined,
    },
    "propose": {
      "last_update": 2022-01-01T00:00:00.000Z,
      "provider": "OSIRIS",
      "type": "undefined",
      "value": undefined,
    },
    "total": {
      "last_update": 2022-01-01T00:00:00.000Z,
      "provider": "OSIRIS",
      "type": "undefined",
      "value": undefined,
    },
  },
  "pluriannualite": {
    "last_update": 2022-01-01T00:00:00.000Z,
    "provider": "OSIRIS",
    "type": "undefined",
    "value": undefined,
  },
  "service_instructeur": {
    "last_update": 2022-01-01T00:00:00.000Z,
    "provider": "OSIRIS",
    "type": "undefined",
    "value": undefined,
  },
  "siret": {
    "last_update": 2022-01-01T00:00:00.000Z,
    "provider": "OSIRIS",
    "type": "string",
    "value": "10000000000001",
  },
  "sous_dispositif": {
    "last_update": 2022-01-01T00:00:00.000Z,
    "provider": "OSIRIS",
    "type": "undefined",
    "value": undefined,
  },
  "status": {
    "last_update": 2022-01-01T00:00:00.000Z,
    "provider": "OSIRIS",
    "type": "undefined",
    "value": undefined,
  },
  "statut_label": {
    "last_update": 2022-01-01T00:00:00.000Z,
    "provider": "OSIRIS",
    "type": "string",
    "value": "NORMALIZED_LABEL",
  },
  "territoires": [],
  "versement": {
    "acompte": {
      "last_update": 2022-01-01T00:00:00.000Z,
      "provider": "OSIRIS",
      "type": "undefined",
      "value": undefined,
    },
    "compensation": {
      "n-1": {
        "last_update": 2022-01-01T00:00:00.000Z,
        "provider": "OSIRIS",
        "type": "undefined",
        "value": undefined,
      },
      "reversement": {
        "last_update": 2022-01-01T00:00:00.000Z,
        "provider": "OSIRIS",
        "type": "undefined",
        "value": undefined,
      },
    },
    "realise": {
      "last_update": 2022-01-01T00:00:00.000Z,
      "provider": "OSIRIS",
      "type": "undefined",
      "value": undefined,
    },
    "solde": {
      "last_update": 2022-01-01T00:00:00.000Z,
      "provider": "OSIRIS",
      "type": "undefined",
      "value": undefined,
    },
  },
  "versementKey": undefined,
}
`;
